--- a/00-ProjectProposal.ipynb
+++ b/00-ProjectProposal.ipynb
@@ -81,8 +81,14 @@
    "metadata": {},
    "source": [
     "Sleep is an important factor in the human body’s overall health, and it is essential for all individuals to get sufficient sleep to support cognitive function, metabolism regulation, and productivity in day-to-day tasks. However, it is important to note that a lack of sleep in many adults can lead to severe health issues, such as a decreased immune response as well as disruptions in mood regulation and mental health. Because of the major role that sleep plays in overall well-being, researchers have studied how certain lifestyle and environmental factors influence sleep quality.\n",
+    "\n",
+    "\n",
     "Researchers have found that sleep does not only pertain to how long one sleeps, but also the quality and duration of the sleep that occurs. For example, sleep must be uninterrupted and allow the body to repair and restore its functions overnight in order to prepare for the following day. With this in mind, prior research explains how good-quality sleep allows both the brain and body to recover, while poor sleep can carry similar risks to getting little to no sleep at all. According to the Sleep Foundation, insufficient or low-quality sleep is linked to weight gain, heart disease, stroke, and mental health problems such as anxiety and depression.<a name=\"cite_ref-SleepFoundation\"></a><sup>1</sup>\n",
+    "\n",
+    "\n",
     "In addition, it is important to note that researchers have studied various lifestyle factors that are linked to the quality and duration of sleep individuals are able to obtain. For instance, factors such as diet, including excessive junk food consumption, screen time, social media use, and physical activity have all been associated with sleep quality.<a name=\"cite_ref-Dzierzewski2021\"></a><sup>2</sup> Researchers have also observed that regular physical activity throughout the day, such as a sufficient amount of cardiovascular exercise, can lead to better overall sleep patterns, especially as individuals age. These findings suggest that unhealthy habits can result in poorer sleep outcomes, while active lifestyles support better sleep quality.<a name=\"cite_ref-Dzierzewski2021\"></a><sup>2</sup>\n",
+    "\n",
+    "\n",
     "In a study conducted in China, it was found that a large population of undergraduate students experienced poor sleep quality due to low levels of physical exercise and high amounts of screen time before bedtime.<a name=\"cite_ref-Wu2022\"></a><sup>3</sup> Although this project will examine several additional factors such as gender, age, occupation, BMI, and blood pressure in addition to lifestyle behaviors like physical exercise, it is important to recognize that each of these factors may have a significant impact on sleep quality. These relationships will be explored further throughout this project.\n"
    ]
   },
@@ -118,7 +124,11 @@
    "metadata": {},
    "source": [
     "The ideal dataset would contain clear, primarily numerical measurements of a person’s sleep quality and the lifestyle habits that are typically associated with sleep. These variables would include physical activity level, daily steps, stress level, heart rate, occupation, and more. This dataset should also take note of demographic characteristics such as age and gender, which can influence sleep quality as well. We would ideally want over 200 observations that have a balanced distribution of different ages, genders, and types of habits. A dataset without any biased representation would ensure that the results of our project are reliable and applicable to the real-world. \n",
+    "\n",
+    "\n",
     "Moreover, the dataset should include numerical data regarding the subjects’ personal and health indicators. Certain measurements such as stress level and sleep quality are highly subjective due to being self-reported, so these features would be difficult to analyze without a numerical representation. For example, one subject’s good quality of sleep could be another subject’s bad quality of sleep. Such subjectivity also amplifies the natural bias in the dataset. Therefore, the data should clearly define a numerical scale that can be more objectively interpreted and easily analyzed. \n",
+    "\n",
+    "\n",
     "The Kaggle Sleep, Health, and Lifestyle dataset is suitable for answering our research question because it contains several measurements of lifestyle habits, health, and demographics such as physical activity levels, stress levels, BMI categories, heart rate, blood pressure, age, and gender. This dataset also contains useful sleep metrics such as sleep quality, sleep disorders, and sleep duration. This dataset also contains 400 observations that are widely spread across ages 27-59 and have an even distribution of male and female subjects. All features are numerically represented, making them easy to analyze and draw conclusions from. In addition, the Kaggle Sleep Efficiency dataset can be used as a supporting dataset to analyze sleep quality at a deeper level using efficiency and sleep stage measurements, while the primary dataset focuses on broader lifestyle habits. This secondary dataset also provides bedtime and wakeup time habits, which can also be studied to support our analysis. Collectively, both of these datasets can help us answer our research question.\n",
     "\n",
     "Datasets:\n",
@@ -225,10 +235,7 @@
     "  \n",
     "Read over the [COGS108 Team Policies](https://github.com/COGS108/Projects/blob/master/COGS108_TeamPolicies.md) individually. Then, include your group’s expectations of one another for successful completion of your COGS108 project below. Discuss and agree on what all of your expectations are. Discuss how your team will communicate throughout the quarter and consider how you will communicate respectfully should conflicts arise. By including each member’s name above and by adding their name to the submission, you are indicating that you have read the COGS108 Team Policies, accept your team’s expectations below, and have every intention to fulfill them. These expectations are for your team’s use and benefit — they won’t be graded for their details.\n",
     "\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+    "All team members are expected to contribute equally and complete their assigned responsibilities on time. Each member is responsible for their own section, including both coding and written components. Communication will be maintained through regular FaceTime calls and group messages to track progress and resolve issues early. All work will be shared through a common GitHub repository, and contributions will be reviewed to ensure consistency and quality. If a member is unable to meet a deadline, they are expected to communicate in advance so tasks can be adjusted accordingly."
    ]
   },
   {
@@ -244,23 +251,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions: REPLACE the contents of this cell with your work\n",
-    "\n",
-    "Specify your team's specific project timeline. An example timeline has been provided. Changes the dates, times, names, and details to fit your group's plan.\n",
-    "\n",
-    "If you think you will need any special resources or training outside what we have covered in COGS 108 to solve your problem, then your proposal should state these clearly. For example, if you have selected a problem that involves implementing multiple neural networks, please state this so we can make sure you know what you’re doing and so we can point you to resources you will need to implement your project. Note that you are not required to use outside methods.\n",
     "\n",
     "\n",
     "\n",
-    "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
+    "| Meeting Date | Meeting Time | Complete Before Meeting | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 1/20  |  1 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
-    "| 3/20  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |"
+    "| 1/29 | 6 PM | Go over project deliverables independently | Review project guidelines and set expectations |\n",
+    "| 2/3 | 6 PM | Go over datasets independently; analyze strengths and weaknesses | Decide on the main topic for the project; delegate dividing tasks for proposal submission |\n",
+    "| 2/10 | 6 PM | Complete initial data cleaning and exploratory data analysis | Review and refine EDA; identify patterns and potential relationships; adjust analysis plan if needed |\n",
+    "| 2/23 | 6 PM | Finish EDA; begin statistical analysis and visualizations | Discuss analysis results; troubleshoot issues; decide on additional analyses if necessary; delegate division of tasks before main analysis |\n",
+    "| 3/5 | 6 PM | Complete main analyses; draft results and discussion sections | Review full draft; edit for clarity and consistency; finalize visualizations |\n",
+    "| 3/19 | 6 PM | Finalize individual sections | Review and proofread all sections including coding and analyses |\n",
+    "\n"
    ]
   }
  ],
