Add data checkpoint cleaning, merging, and documentation

--- a/01-DataCheckpoint.ipynb
+++ b/01-DataCheckpoint.ipynb
@@ -4,30 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rubric\n",
-    "\n",
-    "Instructions: DELETE this cell before you submit via a `git push` to your repo before deadline. This cell is for your reference only and is not needed in your report. \n",
-    "\n",
-    "Scoring: Out of 10 points\n",
-    "\n",
-    "- Each Developing  => -2 pts\n",
-    "- Each Unsatisfactory/Missing => -4 pts\n",
-    "  - until the score is \n",
-    "\n",
-    "If students address the detailed feedback in a future checkpoint they will earn these points back\n",
-    "\n",
-    "\n",
-    "|                  | Unsatisfactory                                                                                                                                                                                                    | Developing                                                                                                                                                                                              | Proficient                                     | Excellent                                                                                                                              |\n",
-    "|------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------|\n",
-    "| Data relevance   | Did not have data relevant to their question. Or the datasets don't work together because there is no way to line them up against each other. If there are multiple datasets, most of them have this trouble | Data was only tangentially relevant to the question or a bad proxy for the question. If there are multiple datasets, some of them may be irrelevant or can't be easily combined.                       | All data sources are relevant to the question. | Multiple data sources for each aspect of the project. It's clear how the data supports the needs of the project.                         |\n",
-    "| Data description | Dataset or its cleaning procedures are not described. If there are multiple datasets, most have this trouble                                                                                              | Data was not fully described. If there are multiple datasets, some of them are not fully described                                                                                                      | Data was fully described                       | The details of the data descriptions and perhaps some very basic EDA also make it clear how the data supports the needs of the project. |\n",
-    "| Data wrangling   | Did not obtain data. They did not clean/tidy the data they obtained.  If there are multiple datasets, most have this trouble                                                                                 | Data was partially cleaned or tidied. Perhaps you struggled to verify that the data was clean because they did not present it well. If there are multiple datasets, some have this trouble | The data is cleaned and tidied.                | The data is spotless and they used tools to visualize the data cleanliness and you were convinced at first glance                      |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# COGS 108 - Data Checkpoint"
    ]
   },
@@ -36,18 +12,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Authors\n",
+    "## Project Contributions\n",
     "\n",
-    "Instructions: REPLACE the contents of this cell with your team list and their contributions. Note that this will change over the course of the checkpoints\n",
+    "- **Akshitaa Balasai**\n",
+    "  - Completed shortcomings and description for Dataset 1  \n",
+    "  - Wrote Background and Prior Work section  \n",
     "\n",
-    "This is a modified [CRediT taxonomy of contributions](https://credit.niso.org). For each group member please list how they contributed to this project using these terms:\n",
-    "> Analysis, Background research, Conceptualization, Data curation, Experimental investigation, Methodology, Project administration, Software, Visualization, Writing – original draft, Writing – review & editing\n",
+    "- **Anwesha Mohanty**\n",
+    "  - Completed description and shortcomings for Dataset 2  \n",
+    "  - Developed the Research Question  \n",
     "\n",
-    "Example team list and credits:\n",
-    "- Alice Anderson: Conceptualization, Data curation, Methodology, Writing - original draft\n",
-    "- Bob Barker:  Analysis, Software, Visualization\n",
-    "- Charlie Chang: Project administration, Software, Writing - review & editing\n",
-    "- Dani Delgado: Analysis, Background research, Visualization, Writing - original draft"
+    "- **Sindhu Dhulipala**\n",
+    "  - Completed the description for Dataset 1  \n",
+    "  - Implemented code to clean and merge both datasets  \n",
+    "\n",
+    "- **Ryan Kasem**\n",
+    "  - Developed Hypothesis  \n",
+    "\n",
+    "- **Hasnain Farishta**\n",
+    "  - Developed Hypothesis  \n"
    ]
   },
   {
@@ -63,8 +46,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions: REPLACE the contents of this cell with your work, including any updates to recover points lost in your proposal feedback\n",
-    "\n"
+    "How does the total duration of daily physical activity affect sleep duration in adults aged 16 and older?\n",
+    "\n",
+    "In this study, sleep quality is defined based on whether an individual’s average sleep duration meets medically recommended levels for adult functional health.\n",
+    "\n",
+    "- Sleep duration is calculated using the total minutes asleep recorded in the dataset.\n",
+    "- Values are evaluated relative to standard adult sleep recommendations (approximately **7–9 hours per night**).\n"
    ]
   },
   {
@@ -136,7 +123,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter cannot be started. Error attempting to locate Jupyter: Running cells with 'Python 3.12.6 64-bit' requires jupyter and notebook package.\n",
+      "Run the following command to install 'jupyter and notebook' into the Python environment. \n",
+      "Command: 'python -m pip install jupyter notebook -U\n",
+      "or\n",
+      "conda install jupyter notebook -U'\n",
+      "Click <a href='https://aka.ms/installJupyterForVSCode'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "# Run this code every time when you're actively developing modules in .py files.  It's not needed if you aren't making modules\n",
     "#\n",
@@ -151,7 +152,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "error: externally-managed-environment\n",
+      "\n",
+      "× This environment is externally managed\n",
+      "╰─> To install Python packages system-wide, try brew install\n",
+      "    xyz, where xyz is the package you are trying to\n",
+      "    install.\n",
+      "    \n",
+      "    If you wish to install a Python library that isn't in Homebrew,\n",
+      "    use a virtual environment:\n",
+      "    \n",
+      "    python3 -m venv path/to/venv\n",
+      "    source path/to/venv/bin/activate\n",
+      "    python3 -m pip install xyz\n",
+      "    \n",
+      "    If you wish to install a Python application that isn't in Homebrew,\n",
+      "    it may be easiest to use 'pipx install xyz', which will manage a\n",
+      "    virtual environment for you. You can install pipx with\n",
+      "    \n",
+      "    brew install pipx\n",
+      "    \n",
+      "    You may restore the old behavior of pip by passing\n",
+      "    the '--break-system-packages' flag to pip, or by adding\n",
+      "    'break-system-packages = true' to your pip.conf file. The latter\n",
+      "    will permanently disable this error.\n",
+      "    \n",
+      "    If you disable this error, we STRONGLY recommend that you additionally\n",
+      "    pass the '--user' flag to pip, or set 'user = true' in your pip.conf\n",
+      "    file. Failure to do this can result in a broken Homebrew installation.\n",
+      "    \n",
+      "    Read more about this behavior here: <https://peps.python.org/pep-0668/>\n",
+      "\n",
+      "note: If you believe this is a mistake, please contact your Python installation or OS distribution provider. You can override this, at the risk of breaking your Python installation or OS, by passing --break-system-packages.\n",
+      "hint: See PEP 668 for the detailed specification. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# Setup code -- this only needs to be run once after cloning the repo!\n",
     "# this code downloads the data from its source to the `data/00-raw/` directory\n",
@@ -207,7 +251,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "error: externally-managed-environment\n",
+      "\n",
+      "× This environment is externally managed\n",
+      "╰─> To install Python packages system-wide, try brew install\n",
+      "    xyz, where xyz is the package you are trying to\n",
+      "    install.\n",
+      "    \n",
+      "    If you wish to install a Python library that isn't in Homebrew,\n",
+      "    use a virtual environment:\n",
+      "    \n",
+      "    python3 -m venv path/to/venv\n",
+      "    source path/to/venv/bin/activate\n",
+      "    python3 -m pip install xyz\n",
+      "    \n",
+      "    If you wish to install a Python application that isn't in Homebrew,\n",
+      "    it may be easiest to use 'pipx install xyz', which will manage a\n",
+      "    virtual environment for you. You can install pipx with\n",
+      "    \n",
+      "    brew install pipx\n",
+      "    \n",
+      "    You may restore the old behavior of pip by passing\n",
+      "    the '--break-system-packages' flag to pip, or by adding\n",
+      "    'break-system-packages = true' to your pip.conf file. The latter\n",
+      "    will permanently disable this error.\n",
+      "    \n",
+      "    If you disable this error, we STRONGLY recommend that you additionally\n",
+      "    pass the '--user' flag to pip, or set 'user = true' in your pip.conf\n",
+      "    file. Failure to do this can result in a broken Homebrew installation.\n",
+      "    \n",
+      "    Read more about this behavior here: <https://peps.python.org/pep-0668/>\n",
+      "\n",
+      "note: If you believe this is a mistake, please contact your Python installation or OS distribution provider. You can override this, at the risk of breaking your Python installation or OS, by passing --break-system-packages.\n",
+      "hint: See PEP 668 for the detailed specification. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n"
    ]
@@ -230,7 +317,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "error: externally-managed-environment\n",
+      "\n",
+      "× This environment is externally managed\n",
+      "╰─> To install Python packages system-wide, try brew install\n",
+      "    xyz, where xyz is the package you are trying to\n",
+      "    install.\n",
+      "    \n",
+      "    If you wish to install a Python library that isn't in Homebrew,\n",
+      "    use a virtual environment:\n",
+      "    \n",
+      "    python3 -m venv path/to/venv\n",
+      "    source path/to/venv/bin/activate\n",
+      "    python3 -m pip install xyz\n",
+      "    \n",
+      "    If you wish to install a Python application that isn't in Homebrew,\n",
+      "    it may be easiest to use 'pipx install xyz', which will manage a\n",
+      "    virtual environment for you. You can install pipx with\n",
+      "    \n",
+      "    brew install pipx\n",
+      "    \n",
+      "    You may restore the old behavior of pip by passing\n",
+      "    the '--break-system-packages' flag to pip, or by adding\n",
+      "    'break-system-packages = true' to your pip.conf file. The latter\n",
+      "    will permanently disable this error.\n",
+      "    \n",
+      "    If you disable this error, we STRONGLY recommend that you additionally\n",
+      "    pass the '--user' flag to pip, or set 'user = true' in your pip.conf\n",
+      "    file. Failure to do this can result in a broken Homebrew installation.\n",
+      "    \n",
+      "    Read more about this behavior here: <https://peps.python.org/pep-0668/>\n",
+      "\n",
+      "note: If you believe this is a mistake, please contact your Python installation or OS distribution provider. You can override this, at the risk of breaking your Python installation or OS, by passing --break-system-packages.\n",
+      "hint: See PEP 668 for the detailed specification. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n"
    ]
@@ -286,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.12.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -300,11 +430,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "16b860a9f5fc21240e9d88c0ee13691518c3ce67be252e54a03b9b5b11bd3c7a"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
